# Learning-to-Reason-in-13-Parameters

./: .gitignore  .pre-commit-config.yaml  PAPER_IMPLEMENTATION.md  README.md  pyproject.toml
configs/: eval_beyond_math.yaml  eval_gsm8k_select.yaml  eval_paper_benchmarks.yaml  export_merged.yaml  grpo_gsm8k.yaml  grpo_gsm8k_adaptive_budget.yaml  grpo_gsm8k_lora.yaml  grpo_gsm8k_lora_xs.yaml  grpo_gsm8k_structured_projection.yaml  grpo_gsm8k_sweep_base.yaml  grpo_math_hard.yaml  hybrid_gsm8k.yaml  sft_gsm8k.yaml  sft_gsm8k_lora.yaml  sft_gsm8k_lora_xs.yaml
configs/sweeps/: adapter_ablation.yaml  paper_full_repro.yaml  sft_capacity.yaml
scripts/: aggregate_results.py  export_merged.py  plot_results.py  run_experiment.py  run_full_sweep.py  run_hybrid_experiment.py  run_paper_sweep.py  run_sweep.py
src/ltr13/: __init__.py  adapter_ops.py  adapter_scores.py  analysis.py  budget.py  checkpointing.py  config.py  data.py  eval.py  export_merged.py  grpo_tis.py  guardrails.py  inference_bridge.py  inject.py  lora.py  metadata.py  modeling.py  results.py  reward.py  tinylora.py  train_grpo.py  train_sft.py  utils.py  validation.py
tests/: test_analysis.py  test_budget.py  test_checkpoint_roundtrip.py  test_config.py  test_distributed_smoke.py  test_inject_tie_modes.py  test_lora_core.py  test_metadata.py  test_results_schema.py  test_reward.py  test_tinylora_core.py  test_validation_guardrails.py
